fixed tooltip carat position not centered if change the tooltip width on the bottom position

--- a/assets/front-end/css/view/tooltip.css
+++ b/assets/front-end/css/view/tooltip.css
@@ -115,13 +115,15 @@
 
 .eael-tooltip .eael-tooltip-text.eael-tooltip-bottom {
   top: 100%;
-  left: 0;
-  right: 0;
-  margin: 10px auto 0px auto;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  margin: 10px auto 0 auto;
 }
 
 .eael-tooltip .eael-tooltip-text.eael-tooltip-bottom::after {
-  margin-top: 0px;
+  margin-top: 0;
   bottom: 100%;
   left: calc(50% - 5px);
   border-color: transparent transparent black transparent;
